--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="emptyCanvas.js"></script>
     <script src="bubbleSketch.js"></script>
     <script src="insertionSketch.js"></script>
+    <script src="selectionSketch.js"></script>
     <script src="quickSketch.js"></script>
     <script src="mergeSketch.js"></script>
     <link rel="stylesheet" href="style/style.css">
@@ -25,6 +26,8 @@
               <button type = "button" onclick= "startBubble()">Bubble Sort</button>
               <div id= "divider"></div>
               <button type ="button" onclick="startInsertion()">Insertion Sort</button>
+              <div id= "divider"></div>
+              <button type ="button" onclick="startSelection()">Selection Sort</button>
               <div id= "divider"></div>
               <button type ="button" onclick="startMerge()">Merge Sort</button>
               <div id= "divider"></div>
