Added descriptions and updated the README file

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <div id="">
+    <div >
+      <div id="rowSpacer"></div>
       <h1 id="title">Algorithm Visualiser</h1>
+      <div id="referenceWrapper"> 
+      <label id="referenceLabel">Reference : </label>
+      <a href="https://www.geeksforgeeks.org/">https://www.geeksforgeeks.org</a>
+    </div>
       <hr>
       <div id = "wrapper">
           <div id="AlgoSelector">
@@ -52,6 +57,7 @@
       </div>
       <div id ="description">
           <h4 id="descriptionTitle">Description</h4>
+          <p id = "descriptionText"></p>
       </div>
     </div>
   </body>
